Prevent wrapping of action buttons.

--- a/style.css
+++ b/style.css
@@ -20,3 +20,6 @@
 .controls > button {
   display: inline-block;
 }
+.actions {
+  white-space: nowrap;
+}
